# phone-access-contract

./: .env  .gitignore  LICENSE  Makefile  README.md  test.sh
contract/: Cargo.toml
contract/src/: lib.rs
